--- a/requirements.txt
+++ b/requirements.txt
@@ -7,3 +7,6 @@ unimol-tools==0.1.3.post1
 rdkit==2022.9.4
 flash_attn==2.7.4.post1
 einops==0.8.1
+scikit-learn==1.5.0
+pandas==1.4.0
+scipy==1.14.1
