--- a/pyproject.toml
+++ b/pyproject.toml
@@ -3,7 +3,7 @@ requires = ["setuptools>=61.0"]
 build-backend = "setuptools.build_meta"
 
 [project]
-name = "hme-model"  # 你希望在pip上显示的名字
+name = "hme" 
 version = "0.1.0"
 authors = [
   { name="Liuzhenghao Lv", email="lvliuzh@stu.pku.edu.cn" },
@@ -26,7 +26,10 @@ dependencies = [
     "scipy==1.14.1",
     "sentencepiece==0.2.0",
     "protobuf==6.31.1",
-    "huggingface-hub==0.32.2"
+    "huggingface-hub==0.32.2",
+    "peft==0.15.1",
+    "accelerate==1.7.0",
+    "periodictable==2.0.2",
 ]
 
 [tool.setuptools.packages.find]
