--- a/requirements.txt
+++ b/requirements.txt
@@ -5,7 +5,6 @@ deepspeed==0.15.2
 ogb==1.2.0
 unimol-tools==0.1.3.post1
 rdkit==2022.9.4
-flash_attn==2.7.4.post1
 einops==0.8.1
 scikit-learn==1.5.0
 pandas==1.4.0
@@ -21,3 +20,4 @@ nltk==3.9.1
 rouge_score==0.1.2
 fcd_torch==1.0.7
 Levenshtein==0.27.1
+#flash_attn==2.7.4.post1  #optional
